# crawling_kbo

./: .gitignore  README.md  crawling.ipynb  crawling_kbo_main.py  env_example  main.py  news_titles.csv  pyproject.toml  requirements.txt
.github/workflows/: crawl_econmy_news.yaml  greeting.yaml  kbo_info_update.yaml  update.yaml
crawling_kbo/sources/: append_to_google_sheets.py  get_kbo_crowd_data.py  get_kbo_team_winrate_data.py  get_kbo_yotube_views.py  kbo_instagram.py
learning_crawling/: crawling_economy_news.py  learn_crawling.ipynb  news_titles.csv
sources/: append_to_google_sheets.py  get_kbo_crowd_data.py  get_kbo_team_winrate_data.py  get_kbo_yotube_views.py  kbo_instagram.py
