[project]
name = "crawling-class"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "gspread>=6.2.0",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "oauth2client>=4.1.3",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "requests>=2.32.3",
]
